--- a/UrlShortener.Api/UrlShortener.Api.csproj
+++ b/UrlShortener.Api/UrlShortener.Api.csproj
@@ -17,6 +17,7 @@
 	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.1" />
 	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
 	  <PackageReference Include="Carter" Version="10.0.0" />
+	  <PackageReference Include="Scalar.AspNetCore" Version="2.12.41" />
   </ItemGroup>
 
   <ItemGroup>
